# anirs-cli

./: Cargo.toml  README.md
src/: api.rs  main.rs
src/ui/: anime.rs  config.rs  mod.rs  state.rs
src/usr/: mod.rs
src/utils/: data.rs  download.rs  files.rs  mod.rs
