[package]
name = "tsuiyomi"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
confy = "0.5.1"
crossterm = "0.26.1"
serde = { version = "1.0.163", features = ["derive"] }
tui = { version = "0.19.0", features = ["serde"] }
